BIBLECAST#1 - Updated documentation.  Fixed constant strings.